# dmesg-to-json

./: .envrc  .gitignore  .rustfmt.toml  Cargo.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: pipeline.yml  rust.yml  shiftleft-analysis.yml
src/: main.rs  structs.rs  utils.rs
src/structs/: iptables.rs  kernel.rs
tests/: cli.rs
tests/data/: full_dmesg_output.txt  full_dmesg_output_after_dmesg-to-json.txt
