[package]
name = "dmesg-to-json"
version = "0.1.0"
authors = [
    "Christian C. <christian.chavez@nav.no>",
    "Christer Edvartsen <christer.edvartsen@nav.no>",
]
edition = "2021"
description = """
A simple rust application for following Linux kernel log lines, filtering them, and converting them to json.\
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.3.2"
num-traits = "0.2.12"
regex = "1.3.9"
anyhow = "1.0.32"
thiserror = "1.0.20"
humantime = "2.0.1"
lazy_static = "1.4.0"
itertools = "0.9.0"
serde_json = "1.0.57"
serde = { version = "1.0", features = ["derive"] }
humantime-serde = "1.0.1"
clap = { version = "4.0.18", features = ["cargo", "env", "derive", "deprecated", "unicode", "wrap_help"] }

[dev-dependencies]
predicates = "1.0.5"
assert_cmd = "1.0.1"
indoc = "1.0.2"
