[package]
name = "dmesg-to-json"
version = "0.1.0"
authors = [
    "Christian C. <christian.chavez@nav.no>",
    "Christer Edvartsen <christer.edvartsen@nav.no>",
]
edition = "2021"
description = """
A simple rust application for following Linux kernel log lines, filtering them, and converting them to json.\
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0"
num-traits = "0"
regex = "1"
anyhow = "1"
thiserror = "1"
humantime = "2"
lazy_static = "1"
itertools = "0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
humantime-serde = "1"
clap = { version = "4", features = ["cargo", "env", "derive", "deprecated", "unicode", "wrap_help"] }

[dev-dependencies]
predicates = "2"
assert_cmd = "2"
indoc = "2"
